agrgar eliminar asignaciones, css mofificado

--- a/neoteca/templates/login.html
+++ b/neoteca/templates/login.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
@@ -7,6 +8,7 @@
     <title>Acceso Neoteca</title>
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/estilo_personalizado.css' %}" rel="stylesheet">
     <style>
         .nav-pills .nav-link.active {
             background-color: #4e73df;
