--- a/neoteca/templates/base.html
+++ b/neoteca/templates/base.html
@@ -1,5 +1,3 @@
-<!--neoteca/templates/base.html-->
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
@@ -13,6 +11,7 @@
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/estilo_personalizado.css' %}" rel="stylesheet">
     
     {% block extra_css %}{% endblock %}
 </head>
@@ -24,9 +23,11 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'home' %}">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-book-open"></i>
+                
+                <div class="sidebar-brand-icon">
+                    <img src="{% static 'img/logo.png' %}" alt="Logo" style="width: 45px; height: auto;">
                 </div>
+                
                 <div class="sidebar-brand-text mx-3">NEOTECA</div>
             </a>
 
@@ -107,15 +108,7 @@
                 {% endif %}
 
             {% else %}
-                <hr class="sidebar-divider">
-                <div class="sidebar-heading">ACCESO</div>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">
-                        <i class="fas fa-fw fa-sign-in-alt"></i>
-                        <span>Iniciar Sesión</span>
-                    </a>
-                </li>
-            {% endif %}
+                {% endif %}
 
             <hr class="sidebar-divider d-none d-md-block">
 
@@ -124,6 +117,7 @@
             </div>
 
         </ul>
+        
         <div id="content-wrapper" class="d-flex flex-column">
 
             <div id="content">
@@ -153,8 +147,8 @@
                             </li>
                         {% else %}
                              <li class="nav-item">
-                                <a class="nav-link text-primary font-weight-bold" href="{% url 'login' %}">
-                                    Ingresar
+                                <a class="nav-link btn-ingresar-top" href="{% url 'login' %}">
+                                    <i class="fas fa-sign-in-alt mr-2"></i> Ingresar
                                 </a>
                             </li>
                         {% endif %}
@@ -213,32 +207,25 @@
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
     <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
+    
     {% block extra_js %}{% endblock %}
-
-<script src="{% static 'js/sb-admin-2.min.js' %}"></script>
 
     {% if request.session.usuario_id %}
     <script>
         (function() {
-            // TIEMPO EN MILISEGUNDOS (Debe coincidir o ser menor al de settings.py)
-            // 5 minutos = 300000 ms
+            // 5 minutos de inactividad
             const TIEMPO_LIMITE = 300000; 
             let temporizador;
 
-            // Función que cierra la sesión
             function cerrarSesion() {
-                // Redirigir a la vista de logout
                 window.location.href = "{% url 'logout' %}?timeout=true";
             }
 
-            // Función que reinicia el contador si hay actividad
             function reiniciarTemporizador() {
                 clearTimeout(temporizador);
                 temporizador = setTimeout(cerrarSesion, TIEMPO_LIMITE);
             }
 
-            // Eventos que consideramos "actividad"
-            // (Mover mouse, teclear, hacer click, scrollear)
             window.onload = reiniciarTemporizador;
             document.onmousemove = reiniciarTemporizador;
             document.onkeypress = reiniciarTemporizador;
