--- a/neoteca/templates/registro_tutor.html
+++ b/neoteca/templates/registro_tutor.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
@@ -6,42 +5,85 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Registro de Familia - Neoteca</title>
+    
+    <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+    
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
+    
+    <link href="{% static 'css/estilo_personalizado.css' %}" rel="stylesheet">
+    
+    <style>
+        /* Ajuste específico para que la imagen de la izquierda se vea bonita */
+        .bg-register-image {
+            background-color: #f4f7fc; /* Mismo fondo suave */
+            background-image: url("{% static 'img/undraw_profile.svg' %}"); /* Usamos una imagen local segura */
+            background-position: center;
+            background-size: 50%; /* Que no ocupe todo, que se vea como logo */
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
-<body class="bg-gradient-info">
+
+<body class="bg-gradient-primary">
+
     <div class="container">
         <div class="card o-hidden border-0 shadow-lg my-5">
             <div class="card-body p-0">
                 <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image" style="background-image: url('https://source.unsplash.com/Mv9hjnEUHR4/600x800');"></div>
+                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                    
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Crear Cuenta de Tutor</h1>
-                                <p class="mb-4">Regístrese para monitorear el progreso de sus estudiantes.</p>
+                                <h1 class="h4 text-gray-900 mb-4 font-weight-bold">Crear Cuenta de Tutor</h1>
+                                <p class="mb-4 text-muted">Regístrese para monitorear el progreso de sus estudiantes.</p>
                             </div>
+                            
                             <form class="user" method="POST">
                                 {% csrf_token %}
+                                
                                 <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">{{ form.nombres }}</div>
-                                    <div class="col-sm-6">{{ form.apellidos }}</div>
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        {{ form.nombres }} 
+                                    </div>
+                                    <div class="col-sm-6">
+                                        {{ form.apellidos }}
+                                    </div>
                                 </div>
-                                <div class="form-group">{{ form.email }}</div>
+                                
+                                <div class="form-group">
+                                    {{ form.email }}
+                                </div>
+                                
                                 <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">{{ form.password }}</div>
-                                    <div class="col-sm-6">{{ form.carnet }}</div>
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        {{ form.password }}
+                                    </div>
+                                    <div class="col-sm-6">
+                                        {{ form.carnet }}
+                                    </div>
                                 </div>
+                                
                                 <div class="form-group row">
-                                    <div class="col-sm-6">{{ form.telefono }}</div>
-                                    <div class="col-sm-6">{{ form.direccion }}</div>
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        {{ form.telefono }}
+                                    </div>
+                                    <div class="col-sm-6">
+                                        {{ form.direccion }}
+                                    </div>
                                 </div>
-                                <button type="submit" class="btn btn-info btn-user btn-block">
+                                
+                                <button type="submit" class="btn btn-primary btn-user btn-block font-weight-bold">
                                     Registrar Cuenta
                                 </button>
                             </form>
+                            
                             <hr>
+                            
                             <div class="text-center">
-                                <a class="small" href="{% url 'login' %}">¿Ya tienes cuenta? Inicia Sesión</a>
+                                <a class="small text-primary font-weight-bold" href="{% url 'login' %}">
+                                    ¿Ya tienes cuenta? Inicia Sesión
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -49,5 +91,11 @@
             </div>
         </div>
     </div>
+
+    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+    <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
+
 </body>
 </html>
